--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
       <div class="container" >
         <div class=" card-header" >
             <div class="row">
-                <div class="col">
+                <div class="col-2">
                     HOME
                 </div>
-                <div class="col">
+                <div class="col-2">
                     SERVICES
                 </div>
-                <div class="col">
+                <div class="col-2">
                     CONTACT US
                 </div>
-                <div class="ABOUT US">
-                    
+                <div class="col-2">
+                    ABOUT US
                 </div>
             </div>
         </div>
