--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
                 </div>
             </div>
         </div>
+ <div class="card-body">
+<p> <b>we Offer Good Health Services To Enable You Live Healthy And Lives Long,Health Is Wealth Why Not Invest 
+    In Your Health Today</b></p>
 
+
+ </div>
       </div>
-        
+         
         <script src="" async defer></script>
     </body>
 </html>
