--- a/index.html
+++ b/index.html
@@ -28,13 +28,19 @@
                 </div>
             </div>
         </div>
- <div class="card-body">
-<p> <b>we Offer Good Health Services To Enable You Live Healthy And Lives Long,Health Is Wealth Why Not Invest 
-    In Your Health Today</b></p>
-
-
- </div>
       </div>
+ <div class="container">
+    <main>
+<h1><b>we Offer Good Health Services To Enable You Live Healthy And Lives Long,Health Is Wealth Why Not Invest 
+    In Your Health Today</b></h1>
+    <br>
+    <button class="btn btn-secondary">
+        BOOK NOW
+    </button>
+    </main>
+</div>
+
+      
          
         <script src="" async defer></script>
     </body>
