--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         </div>
       </div>
       <hr>
-      <hr>
  <div class="container">
     <main>
  <h2> Treasurelandlilongspecialityshop.net</h2>
@@ -67,8 +66,9 @@
    <br>
    <a href=""> CONTACT US</a>
    <br>
-   <a href=""> INSTAAGRAM</a><img src="https://www.freeiconspng.com/uploads/--in-blow-to-crafty-brand-odes-instagram-adopts-minimalist-new-logo-16.jpg" width="350" alt=" : In Blow to Crafty Brand Odes, Instagram Adopts Minimalist New Logo">
+   <a href=""> INSTAAGRAM</a><img  src="https://www.freeiconspng.com/uploads/--in-blow-to-crafty-brand-odes-instagram-adopts-minimalist-new-logo-16.jpg" width="350" alt=" : In Blow to Crafty Brand Odes, Instagram Adopts Minimalist New Logo" class="picture">
    <br>
+   <img src="https://www.freeiconspng.com/uploads/icon-email-icon-clip-art-at-clker-com-vector-qafaq-e-mail-icon-trace--0.png" width="350" alt="icon email icon clip art at clker com vector qafaq e mail icon trace " class="picture" />
         </div>
         
     </div>
