--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </div>
 <hr>
 <footer>
-    <div class="row"> 
+    <div class="row" id="link"> 
         <div class="col">
    <a href="">  ABOUT US</a>
    <br>
