updated index.html, style.css and index.js

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
    <h1>  <b>we Offer Good Health Services To Enable You Live Healthy And Lives Long,Health Is Wealth Why Not Invest 
     In Your Health Today</b></h1>
     <br>
-    <button class="btn btn-secondary">
+    <button class="btn btn-secondary" id="button">
         BOOK NOW
     </button>
     <br>
