--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
     <body>
+        //nav:is used to navigate through pages
       <div class="container" >
         <div class=" card-header" >
             <div class="row">
                 <div class="col-2">
-                    HOME
+                 <nav class="change">  HOME</nav> 
                 </div>
                 <div class="col-2">
-                    SERVICES
+                   <nav class="change">  SERVICES </nav>
                 </div>
                 <div class="col-2">
-                    CONTACT US
+                     <nav class="change">CONTACT US </nav>
                 </div>
                 <div class="col-2">
-                    ABOUT US
+                  <nav class="change">  ABOUT US </nav>
                 </div>
             </div>
         </div>
@@ -48,16 +49,12 @@
 </div>
 
 <div class="container justify-content-md-center" id="next" >
-    <div class="row ">
-        <div class="col">
+
            <h3> It all begins with taking that step, 
             Join us today and experience good health </h3>
-    </div>
-        <div class="col">
+    
          <img   src=" https://images.squarespace-cdn.com/content/v1/653fb2cb039cd72d0c7dfce4/4431bdbf-9c42-40dc-856d-d6bfe13f6d0c/00A6C574-38FD-47D2-8443-0295C60467FD.jpeg?format=750w" alt="flyer" width="600">
-        </div>
-    </div>
-</div>
+         </div>
 <hr>
 <footer  class="end">
     <div class="row" id="link"> 
