updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 <footer  class="end">
     <div class="row" id="link"> 
         <div class="col">
-   <a href="">  ABOUT US</a>
+   <a href=""  class="link">  ABOUT US </a>
    <br>
-   <a href=""> CONTACT US</a>
+   <a href="" class="link"> CONTACT US</a>
    <br>
-   <a href=""> INSTAAGRAM</a>
+   <a href="" class="link"> INSTAAGRAM</a>
 
  </div>
         
