--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </button>
     <br>
     <br>
-    <img src="https://images.squarespace-cdn.com/content/v1/653fb2cb039cd72d0c7dfce4/1698674078732-T4X20UOWPVFOFLXHPLBN/image-asset.jpeg?format=1500w" alt="picture of a girl in yoga" width="500">
+    <img src="https://images.squarespace-cdn.com/content/v1/653fb2cb039cd72d0c7dfce4/1698674078732-T4X20UOWPVFOFLXHPLBN/image-asset.jpeg?format=1500w" alt="picture of a girl in yoga" 
+    width="500" class="image">
     
 </main>
 </div>
