--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <br>
     <br>
     <br>
-    <table border="10px"> 
+    <table > 
         <tr> 
             <td>
     <img src="https://images.squarespace-cdn.com/content/v1/653fb2cb039cd72d0c7dfce4/1698674078732-T4X20UOWPVFOFLXHPLBN/image-asset.jpeg?format=1500w" alt="picture of a girl in yoga" 
