--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     <br>
     <br>
      <div class="row">
-                <div class="col-2">
+                <div class="col-md-6">
 
     <img src="https://images.squarespace-cdn.com/content/v1/653fb2cb039cd72d0c7dfce4/1698674078732-T4X20UOWPVFOFLXHPLBN/image-asset.jpeg?format=1500w" alt="picture of a girl in yoga" 
     width="300" class="image">
             
             </div>
-                <div class="col-2">
+                <div class="col-md-6">
     
     <img   src=" https://images.squarespace-cdn.com/content/v1/653fb2cb039cd72d0c7dfce4/4431bdbf-9c42-40dc-856d-d6bfe13f6d0c/00A6C574-38FD-47D2-8443-0295C60467FD.jpeg?format=750w" alt="flyer" 
     width="400" class="picture">
